[tool.poetry]
name = "twitter_downloader"
version = "0.1.0"
description = "Download Tweets"
authors = ["Yue Wu <wuyuejl97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
